Fix horz overflow

--- a/_scss/components/_content-panel-custom.scss
+++ b/_scss/components/_content-panel-custom.scss
@@ -434,6 +434,7 @@
       position: relative;
       perspective: 800px;
       display: flex;
+      overflow-x: hidden;
 
       @media (max-width: $small-media) {
         padding-top: 0;
