--- a/static/styles.css
+++ b/static/styles.css
@@ -1492,6 +1492,7 @@ img {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
+  overflow-x: hidden;
 }
 
 @media (max-width: 800px) {
